src/app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Roboto&family=Pacifico&display=swap");

@font-face {
  font-family: "Maxcellent";
  src: url("/fonts/Maxcellent.otf") format("truetype");
}

@tailwind base;
@tailwind components;
@tailwind utilities;

/* Custom Font */
@font-face {
  font-family: "Uncut Sans";
  src: url("../../public/fonts/UncutSans-Variable.woff2");
  font-weight: normal;
  font-style: normal;
}

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;

  --font-uncut-sans: "Uncut Sans", sans-serif;
  --primary-black: #232323;
  --primary-white: #f8fafc;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

@layer base {
  :root {
    --radius: 0.5rem;
  }

  .primary-button {
    @apply flex items-center justify-center gap-x-2 rounded-xl bg-primary-black px-8 py-[23px] text-base text-primary-white;
  }
}

html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* div {
  border: 1px solid red;
} */

/* --------- Custom Utilities ----------- */

.flex-center-start {
  @apply flex items-center justify-start;
}

.flex-center {
  @apply flex items-center justify-center;
}

.flex-center-between {
  @apply flex items-center justify-between;
}

.flex-start-between {
  @apply flex items-start justify-between;
}

.flex-center-start {
  @apply flex items-center justify-start;
}

.flex-start-start {
  @apply flex items-start justify-start;
}

/* Button Bubble on Hover */
.hover-bubble {
  z-index: 1;
  position: relative;
  background-color: transparent;
  overflow: hidden;
  transition: color 0.4s ease-in-out;
}

.hover-bubble::before {
  content: "";
  z-index: -1;
  position: absolute;
  top: 100%;
  right: 100%;
  width: 2.5em;
  height: 1em;
  border-radius: 50%;
  background-color: #232323;
  transform-origin: center;
  transform: translate3d(50%, -50%, 0) scale3d(0, 0, 0);
  transition: transform 0.45s ease-in-out;
}

.hover-bubble:hover {
  cursor: pointer;
  color: #f8fafc;
}

.hover-bubble:hover::before {
  transform: translate3d(50%, -50%, 0) scale3d(15, 15, 15);
}
/* Underline on Hover effect */
.hover-underline {
  position: relative;
}

.border-red {
  @apply border border-red-500;
}

.hover-underline::before {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background-color: #000000;
  transform-origin: bottom right;
  transform: scaleX(0);
  transition: transform 0.5s ease;
}

.hover-underline:hover::before {
  transform-origin: bottom left;
  transform: scaleX(1);
}

/* Global page transition loader styles */
.global-loader {
  text-align: center;
  width: fit-content;
  font-weight: bold;
  font-family: monospace;
  font-size: 50px;
  background: linear-gradient(
      135deg,
      #0000 calc(50% - 0.5em),
      #000 0 calc(50% + 0.5em),
      #0000 0
    )
    right/300% 100%;
  animation: l22 2s infinite;
}
.global-loader::before {
  content: "United Threads";
  color: #0000;
  padding: 0 5px;
  background: inherit;
  background-image: linear-gradient(
    135deg,
    #000 calc(50% - 0.5em),
    #fff 0 calc(50% + 0.5em),
    #000 0
  );
  -webkit-background-clip: text;
  background-clip: text;
}

@media screen and (max-width: 768px) {
  .global-loader {
    text-align: center;
    width: fit-content;
    font-weight: bold;
    font-family: monospace;
    font-size: 30px;
    background: linear-gradient(
        135deg,
        #0000 calc(50% - 0.5em),
        #000 0 calc(50% + 0.5em),
        #0000 0
      )
      right/300% 100%;
    animation: l22 2s infinite;
  }
}

@keyframes l22 {
  100% {
    background-position: left;
  }
}

/**
 * ----------------------------------------
 * animation shake-horizontal
 * ----------------------------------------
 */

.shake-hr {
  animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
}

@keyframes shake-horizontal {
  0%,
  100% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
  }
  10%,
  30%,
  50%,
  70% {
    -webkit-transform: translateX(-10px);
    transform: translateX(-10px);
  }
  20%,
  40%,
  60% {
    -webkit-transform: translateX(10px);
    transform: translateX(10px);
  }
  80% {
    -webkit-transform: translateX(8px);
    transform: translateX(8px);
  }
  90% {
    -webkit-transform: translateX(-8px);
    transform: translateX(-8px);
  }
}

/* Ant design custom styles */
.ant-tour-inner * {
  font-family: var(--font-uncut-sans) !important;
  font-size: 1.07rem;
}

.ant-tour-next-btn {
  background-color: var(--primary-black) !important;
  color: var(--primary-white) !important;
  padding: 0.8rem 1.2rem !important;
}

.ant-tag {
  font-family: var(--font-uncut-sans) !important;
}

textarea {
  font-family: var(--font-uncut-sans) !important;
}

.ant-input * {
  font-family: var(--font-uncut-sans) !important;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.hide-scroll::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.hide-scroll {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.ant-empty {
  font-family: var(--font-uncut-sans) !important;
}

.ant-input,
.ant-input * {
  font-family: var(--font-uncut-sans);
}

